"value interface" is a left over from an earlier design and is not allowed by the JEP 401 JLS. An interface will never have the ACC_IDENTITY modifier, hence 'isValue()' will be true but is not significant. Class.toGenericString() should only include the "value" prefix for record and regular classes. Correct the test to match the toGenericString() output.